--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <section id="services" class="section-services section-padding section">
       <div class="container">
         <div class="section__box">
-          <h2 class="section__box-heading">
-            <span class="gradient-text">
+          <h2 class="section__box-heading animate-item">
+            <span class="gradient-text ">
               NASZE USŁUGI
             </span>
           </h2>
-          <p class="section__box-text">
+          <p class="section__box-text animate-item">
             Osiągnij SUKCES z Naszą <span class="gradient-text">Pomocą</span>
           </p>
         </div>
@@ -148,12 +148,12 @@
     <section id="about-us" class="section-about-us section-padding section">
       <div class="container">
         <div class="section__box">
-          <h2 class="section__box-heading">
+          <h2 class="section__box-heading animate-item">
             <span class="gradient-text">
               Czym się zajmujemy
             </span>
           </h2>
-          <p class="section__box-text">Tworzymy strony które działają</p>
+          <p class="section__box-text animate-item">Tworzymy strony które działają</p>
         </div>
 
 
@@ -200,10 +200,10 @@
     <section id="process" class="section-process section-padding section">
       <div class="container">
         <div class="section__box">
-          <h2 class="section__box-heading">
+          <h2 class="section__box-heading animate-item">
             <span class="gradient-text">proces współpracy</span>
           </h2>
-          <p class="section__box-text">Twoja droga do <span class="gradient-text">sukcesu</span></p>
+          <p class="section__box-text animate-item">Twoja droga do <span class="gradient-text">sukcesu</span></p>
         </div>
         <div class="process">
           <div class="process__item animate-item">
@@ -255,8 +255,8 @@
     <section id="faq" class="section-faq section-padding section">
       <div class="container">
         <div class="section__box">
-          <h2 class="section__box-heading"><span class="gradient-text">faq</span></h2>
-          <p class="section__box-text">Najczęściej zadawane pytania</p>
+          <h2 class="section__box-heading animate-item"><span class="gradient-text">faq</span></h2>
+          <p class="section__box-text animate-item">Najczęściej zadawane pytania</p>
         </div>
 
 
@@ -319,8 +319,14 @@
       <div class="container">
         <div class="section__box">
           <h2 class="section__box-heading"><span class="gradient-text">kontakt</span></h2>
-          <p class="section__box-text">zREALIZUJMY TWÓJ PROJEKT RAZEM <br> <span class="gradient-text">Napisz już
-              dziś!</span></p>
+          <p class="section__box-text">
+            zREALIZUJMY TWÓJ PROJEKT RAZEM
+            <br>
+            <span class="gradient-text">
+              Napisz już dziś!
+            </span>
+
+          </p>
         </div>
 
         <div class="contact__box">
@@ -350,6 +356,7 @@
               </a>
             </li>
           </ul>
+          <img src="./dist/img/icons/mhm2.svg" alt="" class="underline-arrow">
         </div>
       </div>
     </section>
