--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Velzua</title>
   <meta name="description"
-    content="Profesjonalne tworzenie stron internetowych dostosowanych do Twoich potrzeb. Nasza firma oferuje kompleksowe usługi projektowania stron, wraz z optymalizacją SEO i responsywnym designem.">
+    content="Tworzymy profesjonalne strony internetowe dostosowane do Twoich potrzeb. Oferujemy kompleksowe usługi projektowania, optymalizację SEO i responsywny design.">
   <title>Tworzenie stron internetowych - Nasza Firma</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
