--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Velzua</title>
   <meta name="description"
-    content="Tworzymy profesjonalne strony internetowe dostosowane do Twoich potrzeb. Oferujemy usługi projektowania, optymalizację SEO i responsywny design.">
-  <title>Tworzenie stron internetowych - Nasza Firma</title>
+    content="Profesjonalne tworzenie stron internetowych dostosowanych do Twoich potrzeb. Nasza firma oferuje kompleksowe usługi projektowania stron, wraz z optymalizacją SEO i responsywnym designem.">
+  <meta name="keywords"
+    content="tworzenie stron internetowych, web development, strony www, responsywne strony, projektowanie stron, usługi webowe">
+  <meta name="author" content="Velzua">
+
+
+  <meta property="og:title" content="Tworzenie Stron Internetowych - Velzua">
+  <meta property="og:description"
+    content="Profesjonalne tworzenie stron internetowych - nowoczesne, responsywne i dopasowane do Twoich potrzeb. Zaufaj ekspertom od web developmentu.">
+  <!-- <meta property="og:image" content="URL_do_zdjęcia"> -->
+  <meta property="og:url" content="https://www.velzua.pl">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="pl_PL">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tworzenie Stron Internetowych - Velzua">
+  <meta name="twitter:description"
+    content="Profesjonalne tworzenie stron internetowych - nowoczesne, responsywne i dopasowane do Twoich potrzeb. Zaufaj ekspertom od web developmentu.">
+  <!-- <meta name="twitter:image" content="../"> -->
+  <meta name="twitter:site" content="@Velzua">
+
+  <title>Velzua - Profesjonalne Tworzenie Stron Internetowych </title>
+
+  <link rel="icon" href="./dist/img/logo.svg" type="image/svg+xml">
+  <meta name="robots" content="index, follow">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -320,7 +343,7 @@
         <div class="section__box">
           <h2 class="section__box-heading"><span class="gradient-text">kontakt</span></h2>
           <p class="section__box-text">
-            zREALIZUJMY TWÓJ PROJEKT RAZEM
+            ZREALIZUJMY TWÓJ PROJEKT RAZEM
             <br>
             <span class="gradient-text">
               Napisz już dziś!
