--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Tworzenie Stron Internetowych - Velzua">
   <meta property="og:description"
     content="Profesjonalne tworzenie stron internetowych - nowoczesne, responsywne i dopasowane do Twoich potrzeb. Zaufaj ekspertom od web developmentu.">
-  <!-- <meta property="og:image" content="URL_do_zdjęcia"> -->
+  <meta property="og:image" content="./dist/img/header_small.jpg">
   <meta property="og:url" content="https://www.velzua.pl">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="pl_PL">
@@ -23,7 +23,7 @@
   <meta name="twitter:title" content="Tworzenie Stron Internetowych - Velzua">
   <meta name="twitter:description"
     content="Profesjonalne tworzenie stron internetowych - nowoczesne, responsywne i dopasowane do Twoich potrzeb. Zaufaj ekspertom od web developmentu.">
-  <!-- <meta name="twitter:image" content="../"> -->
+  <meta name="twitter:image" content="./dist/img/header_small.jpg">
   <meta name="twitter:site" content="@Velzua">
 
   <title>Velzua - Profesjonalne Tworzenie Stron Internetowych </title>
@@ -343,7 +343,7 @@
         <div class="section__box">
           <h2 class="section__box-heading"><span class="gradient-text">kontakt</span></h2>
           <p class="section__box-text">
-            ZREALIZUJMY TWÓJ PROJEKT RAZEM
+            zREALIZUJMY TWÓJ PROJEKT RAZEM
             <br>
             <span class="gradient-text">
               Napisz już dziś!
