--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Profesjonalne tworzenie stron internetowych dostosowanych do Twoich potrzeb. Nasza firma oferuje kompleksowe usługi projektowania stron, wraz z optymalizacją SEO i responsywnym designem.">
+    content="Tworzymy profesjonalne strony internetowe dostosowane do Twoich potrzeb. Oferujemy usługi projektowania, optymalizację SEO i responsywny design.">
   <meta name="keywords"
     content="tworzenie stron internetowych, web development, strony www, responsywne strony, projektowanie stron, usługi webowe">
   <meta name="author" content="Velzua">
