--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords"
     content="tworzenie stron internetowych, web development, strony www, responsywne strony, projektowanie stron, usługi webowe">
   <meta name="author" content="Velzua">
+  <link rel=”canonical” href="https://www.velzua.pl" />
 
 
   <meta property="og:title" content="Tworzenie Stron Internetowych - Velzua">
